[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Swimmer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/BG.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/Water.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Hud.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/WaterArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/WaterArea.gd" type="Script" id=7]
[ext_resource path="res://scenes/Timer.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Water.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/SBSwim-theme.mp3" type="AudioStream" id=11]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="BG" parent="." instance=ExtResource( 2 )]

[node name="WaterArea" parent="." instance=ExtResource( 6 )]
use_parent_material = true
position = Vector2( 0, -40 )
script = ExtResource( 7 )

[node name="Swimmer" parent="." instance=ExtResource( 1 )]
position = Vector2( 184, 344 )
scale = Vector2( 0.5, 0.5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )

[node name="Water" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -3 )
script = ExtResource( 10 )

[node name="Hud" parent="." instance=ExtResource( 5 )]

[node name="OxygenTimer" parent="." instance=ExtResource( 8 )]

[node name="GameOver" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 11 )
